--- a/cascade.css
+++ b/cascade.css
@@ -1,1 +1,35 @@
-
+body{
+	border-style: double;
+    border-width: 3px;
+    border-color: grey;
+}	
+ul {
+    list-style-type: none;
+    margin-left: 40px;
+    padding-right: 25px;
+    padding-bottom: 10px;
+    border-top-style: solid;
+    border-top-width: 2px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: grey;
+    height: 30px;
+    background-color: white;
+}
+li {
+    text-decoration: none;
+    display: inline-block;
+    color: grey;
+    padding: 8px 8px 8px 16px;
+    padding-left: 0px;
+    height: 50px;
+    font-size: 20px;
+    font-family: bold;
+}
+li a:hover{
+	background-color:red;
+}
+#one{
+	font-family: courier;
+	font-size: 14px;
+}
